# osl

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
cfrontend/: Cargo.toml  Makefile  c.k  osl-syntax.k  syntax.k  test copy.c  test.c
cfrontend/c-kompiled/: allRules.txt  compiled.txt  configVars.sh  definition.kore  parsed.txt  syntaxDefinition.kore
cfrontend/c-kompiled/dt/: Lbl'Hash'open'LParUndsRParUnds'K-IO'Unds'IOInt'Unds'String.yaml  Lbl'Hash'stdout'Unds'K-IO'Unds'Int.yaml  Lbl'Unds'dividesInt'UndsUnds'INT-COMMON'Unds'Bool'Unds'Int'Unds'Int.yaml  LblBool2String'LParUndsRParUnds'STRING-COMMON'Unds'String'Unds'Bool.yaml  LblString2Bool'LParUndsRParUnds'STRING-COMMON'Unds'Bool'Unds'String.yaml  LblfreshId'LParUndsRParUnds'ID-COMMON'Unds'Id'Unds'Int.yaml  LblfreshInt'LParUndsRParUnds'INT'Unds'Int'Unds'Int.yaml  LblgetGeneratedCounterCell.yaml  LblinitGeneratedCounterCell.yaml  LblinitGeneratedTopCell.yaml  LblinitKCell.yaml  LblinitOslCell.yaml  LblinitTCell.yaml  LblisAbstractDeclarator.yaml  LblisAdditiveExpression.yaml  LblisAndExpression.yaml  LblisAssignmentExpression.yaml  LblisAssignmentOperator.yaml  LblisBool.yaml  LblisCastExpression.yaml  LblisCompoundStatement.yaml  (+184 more)
cfrontend/src/: configuration.rs  context.rs  lib.rs  main.rs  osl.rs  transpiler.rs
cfrontend/test/: array.c  const-decl.c  dynamic-memory.c  enum.c  factorial.c  function.c  leap.c  loop.c  pointer.c  recursion.c  run.sh  struct-union-decl.c  struct-union.c  struct.c  suffix.c  switch.c
cfrontend/tests/: README.md  allocation.rs  branch.rs  common.rs  declarations.rs  expression.rs  function.rs  loop.rs  statement.rs  stdlib.rs
(+107 files in other folders)
