[package]
name = "osl"
version = "0.1.0"
edition = "2018"

[lib]
name = "osl"
path = "src/lib.rs"

[dependencies]
cfrontend = { path = "cfrontend" }
log = "0.4.0"
env_logger = "0.9"
lang-c = "0.10.1"
structopt = { version = "0.3", default-features = false }
annotate-snippets = "0.9.0"
serde = { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.5.1"

[workspace]

members = [
    "cfrontend",
]