[package]
name = "cfrontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "osl"
path = "src/lib.rs"

[dependencies]
lang-c = "0.10.1"
log = "0.4"
env_logger = "0.8.4"
enum_extract = "0.1.1"
codespan-reporting = "0.11.1"